--- a/css/style.css
+++ b/css/style.css
@@ -265,11 +265,11 @@ h1, h2, h3, h4, h5, h6{
 
 
 #home-slider {
-	background: url(../img/photo_11.jpg);
-	background-size: cover;
-	background-attachment: fixed;
-	position: relative;
-	height:1000px;
+	background: url(../img/photo_11.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 
