--- a/css/style.css
+++ b/css/style.css
@@ -270,8 +270,8 @@ h1, h2, h3, h4, h5, h6{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 100%;
-  min-width: 1024px;
+  min-height: 1024px;
+  min-width: 100%;
 }
 
 
