--- a/css/style.css
+++ b/css/style.css
@@ -661,8 +661,8 @@ h1, h2, h3, h4, h5, h6{
 	float: left;
 	margin-right: 11px;
 	padding: 10px 10px 13px 10px;
-	background-color: #222;
-	color: #fff;
+	background-color: #fff;
+	color: #000;
 	margin-bottom: 11px;
 }
 
@@ -675,13 +675,11 @@ h1, h2, h3, h4, h5, h6{
 	width: 48%;
 	margin-right: 2%;
 	float: left;
-	border-right: 3px solid #222;
-	border-bottom: 3px solid #222;
-	border-top: 1px solid #222;
+	border: 2px;
 	border-left: 1px solid #222;
 	padding: 5px;
 	margin-bottom: 11px;
-	background-color: rgba(255,255,255,0.5);
+	background-color: rgba(255,255,255,0);
 }
 
 #form-name{
