--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,7 @@ h1, h2, h3, h4, h5, h6{
 	width: 48%;
 	margin-right: 2%;
 	float: left;
-	border: 2px;
+	border: 2px solid #fff;
 	border-left: 1px solid #222;
 	padding: 5px;
 	margin-bottom: 11px;
