--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,7 +16,7 @@
 
 	.tile-wrapper{ width: 100%; }
 	#home-slider {
-		background: url(../img/photo_11.jpg) no-repeat center center fixed;
+		background: url(../img/photo_11_mobile.jpg) no-repeat center center fixed;
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
