--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .btn{
-	border: 1px solid #222;
-	border-right: 3px solid;
-	border-bottom: 3px solid;
+	border: 2px solid #fff;
 	padding: 15px;
 	display: inline-block;
 	cursor: pointer;
