--- a/css/style.css
+++ b/css/style.css
@@ -75,15 +75,9 @@ h1, h2, h3, h4, h5, h6{
 	display: inline-block;
 	cursor: pointer;
 	position: relative;
+	color: #fff;
 }
 
-.btn:hover{
-	border-right: 1px solid;
-	border-bottom: 1px solid;
-	top: 2px;
-	left: 2px;
-
-}
 
 .btn-wrapper{
 	display: inline-block;
@@ -680,6 +674,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #form-name{
+	color: #fff;
 	width: 80%;
 	float: left;
 	margin-bottom: 0px;
@@ -698,6 +693,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #form-email{
+	color: #fff;
 	width: 80%;
 	float: left;
 	margin-bottom: 0px;
@@ -733,6 +729,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #form-message{
+	color: #fff;
 	float: left;
 	width: 88%;
 	height: 100px;
@@ -807,6 +804,5 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #copy-text{
-	opacity: 0.4;
 	font-size: 12px;
 }
