--- a/css/foundation.css
+++ b/css/foundation.css
@@ -11,7 +11,7 @@ body {
 
 body {
   background: white;
-  color: #222222;
+  color: #d29679;
   padding: 0;
   margin: 0;
   font-family: 'Varela Round',"Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
