--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,7 +48,8 @@
 	.flex-direction-nav a{ display: none; }
 
 	h1 {
-		font-size:90%;
+		letter-spacing: 3px;
+		line-height: 45px;
 
 }
 
@@ -57,6 +58,11 @@
 	width: 80%;
 
 }
+
+.pad-bottom{
+	margin-bottom: 40px;
+}
+
 
 /****************** TABLETS (portrait and landscape) ----------- */
 @media only screen
