--- a/css/foundation.css
+++ b/css/foundation.css
@@ -11,7 +11,7 @@ body {
 
 body {
   background: white;
-  color: #d29679;
+  color: #ca727a;
   padding: 0;
   margin: 0;
   font-family: 'Varela Round',"Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
@@ -776,7 +776,8 @@ p {
   font-size: 1em;
   line-height: 1.6;
   margin-bottom: 1.25em;
-  text-rendering: optimizeLegibility; }
+  text-rendering: optimizeLegibility;
+   }
   p aside {
     font-size: 0.875em;
     line-height: 1.35;
@@ -784,11 +785,11 @@ p {
 
 p a{
   font-family: 'Varela Round', sans-serif;
-  color: #d29679;
+  color: #CA727A;
   text-decoration: underline;
   line-height: inherit; }
   a:hover, a:focus {
-    color: #a77258; }
+    color: #a4333d; }
   a img {
     border: none; }
 }
@@ -837,7 +838,9 @@ hr {
 em,
 i {
   font-style: italic;
-  line-height: inherit; }
+  line-height: inherit;
+  color: inherit;
+}
 
 strong,
 b {
