--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 /************** SMARTPHONES ****************/
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 768px){
 
 	.hide-for-small{ display: none; }
 	.mobile-nav{ display: block; }
@@ -16,13 +16,7 @@
 
 	.tile-wrapper{ width: 100%; }
 	#home-slider {
-		background: url(../img/photo_11_mobile.jpg) no-repeat center center fixed;
-  	-webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
-  	background-size: cover;
-		padding-top: 50px;
-		padding-bottom: 50px;
+		background: url(../img/photo_11_mobile.jpg) ;
 	}
 	#home-slider .slides li{ padding-top: 50px; padding-bottom: 50px; }
 	.slider-bg{ max-width: 100%; }
