--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 /************** SMARTPHONES ****************/
 
-@media only screen and (max-width: 640px;){
+@media only screen and (max-width: 640px){
 
 	.hide-for-small{ display: none; }
 	.mobile-nav{ display: block; }
