--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,6 +18,9 @@
 	#home-slider {
 		background: url(../img/photo_12_mobile.jpg) ;
 		background-size: contain;
+		background-repeat: no-repeat;
+		min-height: 560px;
+		max-width: 100%;
 	}
 	#home-slider .slides li{ padding-top: 50px; padding-bottom: 50px; }
 	.slider-bg{ max-width: 100%; }
