--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,7 +26,7 @@
 		background: url(../img/photo_2_mobile.jpg) ;
 		background-size: contain;
 		background-repeat: no-repeat;
-		max-height: 800px;
+		min-height: 500px;
 		max-width: 100%;
 		overflow: hidden;
 
@@ -36,7 +36,7 @@
 		background: url(../img/photo_3_mobile.jpg) ;
 		background-size: contain;
 		background-repeat: no-repeat;
-		max-height: 800px;
+		min-height: 500px;
 		max-width: 100%;
 		margin-bottom: 33px;
 
