--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 /************** SMARTPHONES ****************/
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 768px){
 
 	.hide-for-small{ display: none; }
 	.mobile-nav{ display: block; }
@@ -89,6 +89,16 @@ and (max-device-width : 1024px) {
 
 	#clients{  background-attachment: scroll; }
 	#quote-divider{ background-attachment: scroll; }
+
+	#home-slider {
+	background: url(../img/photo_11.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 900px;
+  min-width: 100%;
+}
 
 }
 
