--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,6 +100,14 @@ and (max-device-width : 1024px) {
   min-width: 100%;
 }
 
+#about-text{
+	font-weight: 300;
+	margin-bottom: 66px;
+	color: #ca727a;
+	font-size: 20px;
+	line-height: 20px;
+}
+
 }
 
 /***************** TABLETS (portrait) ----------- */
