--- a/css/responsive.css
+++ b/css/responsive.css
@@ -105,7 +105,8 @@ and (max-device-width : 1024px) {
 	margin-bottom: 66px;
 	color: #ca727a;
 	font-size: 20px;
-	line-height: 20px;
+	line-height: 30px;
+	padding: 10px;
 }
 
 }
