--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,13 +91,7 @@ and (max-device-width : 1024px) {
 	#quote-divider{ background-attachment: scroll; }
 
 	#home-slider {
-	background: url(../img/photo_11.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  min-height: 900px;
-  min-width: 100%;
+	background-attachment: scroll; }
 }
 
 #about-text{
