less padding, iphone

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,6 +48,7 @@
 		columns: 100px 1;
 		-webkit-columns: 100px 1;
 		-moz-columns: 100px 1;
+		padding: 5px;
 	}
 
 	.team-img-holder img{ width: 100% }
