--- a/css/responsive.css
+++ b/css/responsive.css
@@ -49,6 +49,7 @@
 		-webkit-columns: 100px 1;
 		-moz-columns: 100px 1;
 		padding: 5px;
+		line-height: 24px;
 	}
 
 	.team-img-holder img{ width: 100% }
