--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,14 +100,10 @@
 }
 
 
-
-
-
-
 }
 
 /***************** TABLETS (portrait) ----------- */
-@media only screen and (min-device-width: 768px) and (orientation : portrait) {
+@media only screen and (min-device-width: 308px) and (max-device-width: 304px) and (orientation : portrait) {
 
 	.navigation li{ margin-right: 32px; }
 	.service h5{ 1em }
@@ -123,7 +119,7 @@
 	color: #ca727a;
 	font-size: 18px;
 	line-height: 36px;
-	padding: 25px;
+	padding: 85px;
 }
 
 	#home-slider {
