--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ input{ -webkit-appearance: none; }
 .pad-large{
 	padding-top: 88px;
 	padding-bottom: 88px;
-	background-color: #f3ddcd;
+	background-color: #f3decb;
 }
 
 .pad-small{
