tumblr css update

--- a/css/tumblr-responsive.css
+++ b/css/tumblr-responsive.css
@@ -3,7 +3,7 @@
 
 
 #home-slider {
-    background: url(../img/photo_01_mobile.jpg) ;
+    background: url(http://apromisemade.co/img/photo_01_mobile.jpg) ;
     background-size: contain;
     background-repeat: no-repeat;
     min-height: 499px;
